feat: implement IDX-GF-QRY-1 get governance framework version (#261) (#322)
